fix: enable missed turn notifications in crier.js and update CSS styles for missed-crier elements to enhance visibility and user experience

--- a/styles/module.css
+++ b/styles/module.css
@@ -169,8 +169,8 @@
 
 .chat-message[data-message-id].coffee-pub.missed-crier {
 	display: block;
-    background-color: #F3F1E9;
-    border: 2px solid rgb(185, 121, 0);
+    background-color: rgba(102, 61, 0, 0.9);
+    border: 0px solid rgb(185, 121, 0);
     padding-top: 8px;
 	padding-bottom: 8px;
 	padding-left: 30px;
@@ -182,42 +182,44 @@
 }
 @keyframes missed-pulse-color {
 	0% {
-		background: rgb(119, 78, 16);
+		background: rgba(119, 78, 16, 0.9);
 	}
 
 	50% {
-		background: rgb(102, 61, 0);
+		background: rgba(102, 61, 0, 0.9);
 	}
 
 	100% {
-		background: rgb(119, 78, 16);
+		background: rgba(119, 78, 16, 0.9);
 	}
 }
 .chat-message[data-message-id].coffee-pub.missed-crier .missed-token {
     color: #ffffff;
     text-align: left;
     font-size: 1.0em;
+    text-transform: uppercase;
 }
 span.missed-combatant {
     font-weight:550;
-    font-size: 0.9em;
+    font-size: 1.0em;
     font-style: normal;
     text-transform: uppercase;
 }
 span.missed-turn-text {
 	font-weight:100;
-    font-size: 0.9em;
+    font-size: 1.0em;
+    text-transform: uppercase;
 }
 .missed-turn-icon {
-	color: rgb(255, 166, 0);
+	color: rgba(255, 255, 255, 0.9);
 	font-weight: 550;
 	margin-right: 4px;
-	margin-left: -20px;
+	margin-left: 2px;
 }
 /*  delete button */
 .chat-message[data-message-id].coffee-pub.missed-crier .message-metadata {
     flex: 0;
-	display: block;
+	display: none;
 	color: rgb(255, 166, 0);
 	font-size: 0.9em;
 	font-weight: 500;
